--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
 table {
   border-collapse: collapse;
-  margin: 0 auto;
 }
 
 #pixelCanvas td {
